Fixed background image cropping

--- a/frontend_fortuna_v2/src/Main.css
+++ b/frontend_fortuna_v2/src/Main.css
@@ -18,7 +18,6 @@ body {
 	color: #04CCFF;
   height: 100%;
   width: 100%;
-  background-image: url('/landing_gif.gif');
   /* background-repeat:round; */
   /* box-shadow: 0 0 8px 8px #04CCFF inset; */
 }
