--- a/frontend_fortuna_v2/src/armory/Armory.css
+++ b/frontend_fortuna_v2/src/armory/Armory.css
@@ -139,3 +139,11 @@
 .wagerTank label {
     color: #04CCFF;
 }
+
+.background-image-armory {
+    background: url('/armory_image_revised.png');
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
